Enum listing_conditions {
  NEW
  USED
  CERTIFIED
}

Enum listing_statuses {
  AVAILABLE
  PENDING
  SOLD
  REMOVED
}

Enum fuel_types {
  PETROL
  DIESEL
  HYBRID
  ELECTRIC
}

Enum transmissions {
  MANUAL
  AUTOMATIC
}

Enum attribute_types {
  ENUM
  RANGE
  BOOLEAN
}

Table categories {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  parent_id uuid [ref: > categories.id, note: 'ON DELETE RESTRICT']
  name text [not null]
  slug text [not null, unique]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  checks {
    `parent_id <> id` [name: 'categories_not_self_parent']
  }

  indexes {
    parent_id [name: 'idx_categories_parent']
  }
}

Table vehicle_listings {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  category_id uuid [not null, ref: > categories.id, note: 'ON DELETE RESTRICT']
  make text [not null]
  model text [not null]
  year smallint [not null]
  price bigint [not null, note: 'Integer amount; currency is not represented']
  mileage integer [not null]
  condition listing_conditions [not null]
  color text [not null]
  location text [not null]
  status listing_statuses [not null, default: 'AVAILABLE']
  image_url text
  fuel_type fuel_types
  transmission transmissions
  engine_cc integer
  search_vector tsvector [note: 'Stored generated vector from make, model, and location using the simple text configuration; indexed with PostgreSQL GIN as idx_listings_search']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  checks {
    `year BETWEEN 1900 AND 2100` [name: 'listings_year_range']
    `price >= 0` [name: 'listings_price_nonneg']
    `mileage >= 0` [name: 'listings_mileage_nonneg']
  }

  indexes {
    category_id [name: 'idx_listings_category']
    (status, make, year, price) [name: 'idx_listings_filter']
    mileage [name: 'idx_listings_mileage']
    (category_id, fuel_type) [name: 'idx_listings_fuel']
    (created_at, id) [name: 'idx_listings_created', note: 'PostgreSQL order is created_at DESC, id DESC']
    (`lower(make)`) [name: 'idx_listings_make_prefix', note: 'Partial PostgreSQL text_pattern_ops index where status = AVAILABLE']
    (`lower(model)`) [name: 'idx_listings_model_prefix', note: 'Partial PostgreSQL text_pattern_ops index where status = AVAILABLE']
    (`lower(location)`) [name: 'idx_listings_location_prefix', note: 'Partial PostgreSQL text_pattern_ops index where status = AVAILABLE']
    (status, price, id) [name: 'idx_listings_price_id']
    (status, year, id) [name: 'idx_listings_year_id']
    (status, mileage, id) [name: 'idx_listings_mileage_id']
  }
}

Table attribute_definitions {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  category_id uuid [not null, ref: > categories.id, note: 'ON DELETE CASCADE']
  key text [not null]
  label text [not null]
  type attribute_types [not null]
  options text[]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    (category_id, key) [name: 'attribute_definitions_active_category_key', note: 'Partial PostgreSQL unique index where deleted_at IS NULL']
  }
}

Table listing_attribute_values {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  listing_id uuid [not null, ref: > vehicle_listings.id, note: 'ON DELETE CASCADE']
  attribute_definition_id uuid [not null, ref: > attribute_definitions.id, note: 'ON DELETE CASCADE']
  value_text text
  value_number numeric
  value_bool boolean
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  checks {
    `num_nonnulls(value_text, value_number, value_bool) = 1` [name: 'listing_attribute_values_one_value']
  }

  indexes {
    (listing_id, attribute_definition_id) [unique, name: 'listing_attribute_values_listing_attribute_unique']
    listing_id [name: 'idx_listing_attribute_values_listing']
    (attribute_definition_id, value_text) [name: 'idx_listing_attribute_values_attr_text', note: 'Partial where value_text IS NOT NULL']
    (attribute_definition_id, value_number) [name: 'idx_listing_attribute_values_attr_number', note: 'Partial where value_number IS NOT NULL']
    (attribute_definition_id, value_bool) [name: 'idx_listing_attribute_values_attr_bool', note: 'Partial where value_bool IS NOT NULL']
  }
}
